@@ -1849,8 +1849,8 @@ int	uint64_in_list(char *list, zbx_uint64_t value)
  *             num - number of elements                                       *
  *             id  - index to look for                                        *
  *                                                                            *
- * Return value: nearest index position                                       *
- *               0 - otherwise                                                *
+ * Return value: index at which it would be possible to insert the element so *
+ *               that the array is still sorted                               *
  *                                                                            *
  ******************************************************************************/
 int	get_nearestindex(void *p, size_t sz, int num, zbx_uint64_t id)
